<resources>
    <string name="app_name">ColorNote</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SetPassword">Set Password</string>
    <string name="InputPassword">Input password</string>
    <string name="ConfirmPassword">Confirm password</string>
    <string name="NotePassword">Passwords are used to encrypt and decrypt notes for protection and backup</string>
    <string name="Setting">Setting</string>
    <string name="PasswordSetting">Password entered again\nRemove all password protected note</string>
    <string name="ReminderSetting">Reminder Setting</string>
    <string name="note">Note</string>
    <string name="calendar">Calendar</string>
    <string name="archive">Archive</string>
    <string name="trashcan">Trash Can</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">FeedBack</string>
    <string name="information">Information</string>
    <string name="noidung">Nội Dung</string>
    <string name="noteapp">NOTE COLOR</string>
    <string name="Author">Author</string>
    <string name="PrivacyPolicy">PrivacyPolicy</string>
    <string name="Email">Email</string>
    <string name="login">Login</string>

</resources>