<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Setting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        app:title="@string/Setting"
        android:background="#FFFFFF"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Default Screen"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnScreen"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Note"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Default font size"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnFontSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Medium"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Default color"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <ImageButton
                    android:id="@+id/btnChangeColor"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_margin="3dp"
                    android:background="@color/colorWhiteBlue"
                    android:gravity="right|center_vertical"
                    android:text="Note"
                    android:layout_weight="2"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="List item height"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnItemHeight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Normal"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Font"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnFont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Default"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Font size"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnSize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="12"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btnRemovePass"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PasswordSetting"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Theme"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Soft"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ReminderSetting"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Sound reminder"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btnSound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="Default"
                    android:layout_weight="2"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Pin to status bar"
                    android:textSize="@dimen/text_title"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    />
                <Switch
                    android:id="@+id/pinTaskBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>